Add content hash method and tests